--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "axios": "^1.8.4",
     "dotenv": "^16.4.7",
     "node-telegram-bot-api": "^0.66.0",
-    "nodemon": "^3.1.9"
+    "nodemon": "^3.1.9",
+    "openai": "^4.91.1"
   }
 }
